# Billing-System

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
src/billing/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
src/billing/management/commands/: create_superuser.py  delete_empty_bills.py
src/billing/migrations/: 0001_initial.py  0002_product_barcode.py  0003_product_purchase_rate_product_stock_and_more.py
src/core/: context_processors.py  settings.py  urls.py
src/static/css/: tailwind-output.css
src/static/js/: barcode-scanner.js  create_edit_bill_page.js  script.js
src/templates/: 403.html  404.html
src/templates/billing/: base.html  create_edit_bill.html  dashboard.html  login.html  print_bill.html  view_bill.html
src/templates/billing/partials/: create_edit_bill_item.html  dashboard_bill.html  messages.html  navbar.html
